Add pip cache to speed up workflow
Cache pip packages to avoid re-downloading skills-ref dependencies
on subsequent runs.

--- a/.github/workflows/validate-skills.yml
+++ b/.github/workflows/validate-skills.yml
@@ -23,6 +23,14 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Cache pip packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-skills-ref
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Install skills-ref
         run: pip install git+https://github.com/agentskills/agentskills.git#subdirectory=skills-ref
 
