--- a/bin/package.json
+++ b/bin/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
-    "gray-matter": "^4.0.3"
+    "gray-matter": "^4.0.3",
+    "yaml": "^2.7.0"
   }
 }
