Additional Claude to Kilo Code renames
- artifacts-builder: Claude conversations -> Kilo sessions
- canvas-design: next Claude -> next phase
- content-research-writer: web Claude -> web chat
- file-organizer: Let Claude handle -> Let Kilo Code handle
- internal-comms: Claude should use -> This skill should be used
- skill-share: Claude skills -> Kilo Code skills
- skill-creator/init_skill.py: Remove Claude references
- marketplace.yaml: Update descriptions to match SKILL.md changes

--- a/skills/marketplace.yaml
+++ b/skills/marketplace.yaml
@@ -18,7 +18,7 @@ items:
   - id: internal-comms
     description: >-
       A set of resources to help me write all kinds of internal communications, using the formats that my company likes
-      to use. Claude should use this skill whenever asked to write some sort of internal communications (status reports,
+      to use. This skill should be used whenever asked to write some sort of internal communications (status reports,
       leadership updates, 3P updates, company newsletters, FAQs, incident reports, project updates, etc.).
     category: business-marketing
     githubUrl: https://github.com/Kilo-Org/kilo-marketplace/tree/main/skills/internal-comms
@@ -141,7 +141,7 @@ items:
     content: https://github.com/Kilo-Org/kilo-marketplace/releases/download/skills-latest/skill-creator.tar.gz
   - id: skill-share
     description: >-
-      A skill that creates new Claude skills and automatically shares them on Slack using Rube for seamless team
+      A skill that creates new Kilo Code skills and automatically shares them on Slack using Rube for seamless team
       collaboration and skill discovery.
     category: development
     githubUrl: https://github.com/Kilo-Org/kilo-marketplace/tree/main/skills/skill-share
