--- a/skills/marketplace.yaml
+++ b/skills/marketplace.yaml
@@ -134,7 +134,7 @@ items:
   - id: skill-creator
     description: >-
       Guide for creating effective skills. This skill should be used when users want to create a new skill (or update an
-      existing skill) that extends Claude's capabilities with specialized knowledge, workflows, or tool integrations.
+      existing skill) that extends the agent's capabilities with specialized knowledge, workflows, or tool integrations.
     category: development
     githubUrl: https://github.com/Kilo-Org/kilo-marketplace/tree/main/skills/skill-creator
     rawUrl: https://raw.githubusercontent.com/Kilo-Org/kilo-marketplace/main/skills/skill-creator/SKILL.md
