--- a/.github/workflows/generate-marketplace.yml
+++ b/.github/workflows/generate-marketplace.yml
@@ -41,10 +41,14 @@ jobs:
         run: pnpm exec tsx generate-modes-marketplace.ts
         working-directory: bin
 
+      - name: Generate mcps marketplace.yaml
+        run: pnpm exec tsx generate-mcps-marketplace.ts
+        working-directory: bin
+
       - name: Check for changes
         id: changes
         run: |
-          if git diff --quiet skills/marketplace.yaml modes/marketplace.yaml; then
+          if git diff --quiet skills/marketplace.yaml modes/marketplace.yaml mcps/marketplace.yaml; then
             echo "changed=false" >> $GITHUB_OUTPUT
           else
             echo "changed=true" >> $GITHUB_OUTPUT
@@ -55,6 +59,6 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add skills/marketplace.yaml modes/marketplace.yaml
+          git add skills/marketplace.yaml modes/marketplace.yaml mcps/marketplace.yaml
           git commit -m "chore: regenerate marketplace.yaml"
           git push
