ci: disable GitHub workflows for marketplace generation, packaging, and validation

--- a/.github/workflows/validate-skills.yml
+++ b/.github/workflows/validate-skills.yml
@@ -1,15 +1,15 @@
 name: Validate Skills
 
-on:
-  push:
-    branches: [main]
-    paths:
-      - 'skills/**'
-  pull_request:
-    branches: [main]
-    paths:
-      - 'skills/**'
-  workflow_dispatch:
+# on:
+#   push:
+#     branches: [main]
+#     paths:
+#       - 'skills/**'
+#   pull_request:
+#     branches: [main]
+#     paths:
+#       - 'skills/**'
+#   workflow_dispatch:
 
 jobs:
   validate:
