--- a/.github/workflows/package-skills.yml
+++ b/.github/workflows/package-skills.yml
@@ -1,13 +1,13 @@
 name: Package Skills
 
-on:
-  push:
-    branches:
-      - main
-    paths:
-      - "skills/**"
-      - "bin/**"
-  workflow_dispatch:
+# on:
+#   push:
+#     branches:
+#       - main
+#     paths:
+#       - "skills/**"
+#       - "bin/**"
+#   workflow_dispatch:
 
 permissions:
   contents: write
