--- a/.github/workflows/validate-skills.yml
+++ b/.github/workflows/validate-skills.yml
@@ -1,4 +1,4 @@
-name: Validate Skills
+# name: Validate Skills
 
 # on:
 #   push:
@@ -11,40 +11,40 @@ name: Validate Skills
 #       - 'skills/**'
 #   workflow_dispatch:
 
-jobs:
-  validate:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+# jobs:
+#   validate:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
+#       - name: Set up Python
+#         uses: actions/setup-python@v5
+#         with:
+#           python-version: '3.11'
 
-      - name: Cache pip packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-skills-ref
-          restore-keys: |
-            ${{ runner.os }}-pip-
+#       - name: Cache pip packages
+#         uses: actions/cache@v4
+#         with:
+#           path: ~/.cache/pip
+#           key: ${{ runner.os }}-pip-skills-ref
+#           restore-keys: |
+#             ${{ runner.os }}-pip-
 
-      - name: Install skills-ref
-        run: pip install git+https://github.com/agentskills/agentskills.git#subdirectory=skills-ref
+#       - name: Install skills-ref
+#         run: pip install git+https://github.com/agentskills/agentskills.git#subdirectory=skills-ref
 
-      - name: Validate all skills
-        run: |
-          failed=0
-          for skill_dir in skills/*/; do
-            # Skip hidden directories
-            if [[ "$(basename "$skill_dir")" == .* ]]; then
-              continue
-            fi
-            echo "Validating: $skill_dir"
-            if ! skills-ref validate "$skill_dir"; then
-              failed=1
-            fi
-          done
-          exit $failed
+#       - name: Validate all skills
+#         run: |
+#           failed=0
+#           for skill_dir in skills/*/; do
+#             # Skip hidden directories
+#             if [[ "$(basename "$skill_dir")" == .* ]]; then
+#               continue
+#             fi
+#             echo "Validating: $skill_dir"
+#             if ! skills-ref validate "$skill_dir"; then
+#               failed=1
+#             fi
+#           done
+#           exit $failed
