ci: add validation and verification steps to workflows
Add catalog drift check to validate-marketplace workflow to ensure generated marketplace YAML files are up-to-date with source files.

Add artifact URL verification step to package-skills workflow to output the download URLs for the packaged skills.

--- a/.github/workflows/package-skills.yml
+++ b/.github/workflows/package-skills.yml
@@ -63,3 +63,12 @@ jobs:
             --notes "Latest packaged skills. Updated automatically."
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Verify artifact URLs
+        run: |
+          echo "Artifacts uploaded to skills-latest:"
+          for tarball in dist/*.tar.gz; do
+            filename=$(basename "$tarball")
+            url="https://github.com/lawkitt/lawkitt-marketplace/releases/download/skills-latest/$filename"
+            echo "- $url"
+          done
