ci: add read permissions and fallback token for marketplace workflows
Add `contents: read` permission to validate-marketplace.yml to ensure workflow can access repository contents.

Update GITHUB_TOKEN references to use MARKETPLACE_TOKEN as primary with GITHUB_TOKEN fallback in generate-marketplace.yml and package-skills.yml workflows to support both personal and marketplace repository contexts.

--- a/.github/workflows/package-skills.yml
+++ b/.github/workflows/package-skills.yml
@@ -52,7 +52,7 @@ jobs:
           draft: false
           prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.MARKETPLACE_TOKEN || secrets.GITHUB_TOKEN }}
 
       - name: Update latest release tag
         run: |
@@ -62,7 +62,7 @@ jobs:
             --title "Latest Skills" \
             --notes "Latest packaged skills. Updated automatically."
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.MARKETPLACE_TOKEN || secrets.GITHUB_TOKEN }}
 
       - name: Verify artifact URLs
         run: |
